fix  namning  convention 맞게 수정